003 ==> 187523 : digiKam crashes on startup (undefined symbol).
004 ==> 187569 : Crash on star removing when filtering by stars.
005 ==> 186549 : digiKam crashes when hovering the bottom part of its.
006 ==> 187641 : Error while loading shared libraries: libkdcraw.so.5.
007 ==> 187429 : Crash on Launch after disable KIPI plugins rotate. 
008 ==> 187937 : Writing tags to files doesn't update modification timestamp.
009 ==> 184687 : Crash after deleting an empty album.
010 ==> 186766 : Crash after finish resize and rename of images in folder.
011 ==> 184953 : Zooming and paning in slideshow / without toolbars.
012 ==> 187508 : Spontaneous crash whilst doing nothing in particular.
013 ==> 188235 : Assigning a color profile to TIFF images does not work anymore with 0.10.0.
014 ==> 187748 : Install application icons to right path for non-KDE desktops.
015 ==> 186255 : digiKam crashes when switching collection database. 
016 ==> 178292 : AspectRatioCrop is slow and jumps around in first second. 
017 ==> 181892 : AspectRatioCrop: some properties should be disabled.
018 ==> 188573 : RW2 converter broken for low light images.
019 ==> 188642 : GPS data in Digikam shows the wrong places on the map.
020 ==> 188907 : Album view should display subfolders, like tag view does.
021 ==> 183038 : "Select All" action interrupts other widgets. 
022 ==> 189022 : Better guessing of proportions with 'inverse transformation' option.
023 ==> 189286 : EXIF info lost while converting from NEF to TIFF.
024 ==> 189336 : Preview of RAW look different than actual image.
025 ==> 189413 : Images without GPS-data are shown on the equator in the geolocation-view.
026 ==> 184954 : Unable to delete items from camera - canon sx10is.
027 ==> 189168 : You do not have write access to your home directory base path.
028 ==> 185617 : Images are invalid / not found when an album is moved.
029 ==> 
